--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>xml-maven-plugin</artifactId>
-                <version>1.0-beta-3</version>
+                <version>1.0.1</version>
                 <executions>
                     <execution>
                         <phase>verify</phase>
