--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>bluemoon</artifactId>
     <version>1.11</version>
 
-    <name>bluemoon Maven Webapp</name>
+    <name>iFme interface test</name>
     <url>http://maven.apache.org</url>
 
     <dependencies>
@@ -72,6 +72,7 @@
                     <resultsFileFormat>xml</resultsFileFormat>
                     <ignoreResultFailures>true</ignoreResultFailures>
                     <testResultsTimestamp>false</testResultsTimestamp>
+                    <overrideRootLogLevel>debug</overrideRootLogLevel>
                 </configuration>
                 <executions>
                     <execution>
